--- a/resume.html
+++ b/resume.html
@@ -56,9 +56,16 @@
                         <div class="skills-col2">
                             <li>Python</li>
                             <li>MySQL</li>
-                            <li>PLSQL</li>
-                            <li>C(intermediate)</li>
-                            <li>PHP(Basics)</li>
+                            <li>MogngoDB</li>
+                            <li>Node</li>
+                            <li>npm</li>
+                        </div>
+                        <div class="skills-col2">
+                            <li>Express</li>
+                            <li>RESTApi</li>
+                            <li>API Auth</li>
+                            <li>JQuery</li>
+                            <li>Ejs</li>
                         </div>
                     </ul>
                 </div>
