--- a/index.html
+++ b/index.html
@@ -39,13 +39,10 @@
             
             <div class=" d-md-flex flex-column order-md-1 ">
                 <div class="content1">
-                    <h1>Hello</h1>
+                    <h1>Hello 👋</h1>
                     <h3 class="">A Bit About Me</h3>
                     <p class="aboutMe">
-                        I'm Jagan currently pursuing my master's degree at SUNY Binghamton in the stream 
-                        of computer Science. My key skills include: Front-end development(Static and Responsive) and Python.
-                       
-                    </p>
+                        I'm Jagan, a CS Master's student at SUNY Binghamton, specializing in full-stack development with a focus on React & Next.js for front-end and Node.js & Python for back-end.                    </p>
                 </div>
                 <div class="three_buttons">
                     <a class="button btn1" href="./resume.html">Resume</a>
