--- a/resume.html
+++ b/resume.html
@@ -95,7 +95,7 @@
                     <h2>Work Experience</h2>
                 </div>
                 <div class="works">
-                    <div class="date"><p class="time-period">DEC 2023 - PRESENT</p></div>
+                    <div class="date"><p class="time-period">AUG 2023 - JUN 2024</p></div>
                 </div>
                 <div class="work-head-body mx-2">
                     <h4 class="works-heading">Website Operations, Sodexo | Binghamton, USA</h4>
@@ -135,7 +135,7 @@
                     <h2>Education</h2>
                 </div>
                 <div class="date">
-                    <p>AUG 2022 - PRESENT</p>
+                    <p>👨‍🎓 GRADUATED</p>
                 </div>
                 
                
