--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <h1>Hello 👋</h1>
                     <h3 class="">A Bit About Me</h3>
                     <p class="aboutMe">
-                        I'm Jagan, a CS Master's student at SUNY Binghamton, specializing in full-stack development with a focus on React & Next.js for front-end and Node.js & Python for back-end.                    </p>
+                        I'm Jagan, a recent graduate from SUNY Binghamton with a Master's degree in CS, specializing in full-stack development with a focus on React & Next.js for front-end and Node.js & Python for back-end.                    </p>
                 </div>
                 <div class="three_buttons">
                     <a class="button btn1" href="./resume.html">Resume</a>
