--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                 <div class="content1">
                     <h1>Hello 👋</h1>
                     <h3 class="">A Bit About Me</h3>
-                    <p class="aboutMe">
-                        I'm Jagan, a recent graduate from SUNY Binghamton with a Master's degree in CS, specializing in full-stack development with a focus on React & Next.js for front-end and Node.js & Python for back-end.                    </p>
+                    <p class="aboutMe">I'm Jagan, a recent SUNY Binghamton CS Master's graduate specializing in full-stack development with React, Next.js for front-end, and Node.js, Python for back-end.</p>
                 </div>
                 <div class="three_buttons">
                     <a class="button btn1" href="./resume.html">Resume</a>
