--- a/resume.html
+++ b/resume.html
@@ -98,7 +98,7 @@
                     <div class="date"><p class="time-period">SEP 2022 - JUN 2024</p></div>
                 </div>
                 <div class="work-head-body mx-2">
-                    <h4 class="works-heading">UI Developer, Sodexo | Binghamton, USA</h4>
+                    <h4 class="works-heading">Web Developer, Sodexo | Binghamton, USA</h4>
                     <p class="works-text-box">
                         In my role at Sodexo, I significantly increased BUDS webpage user engagement by 20% through the integration of React & Next.js, making the content more dynamic and interactive. Utilizing Material UI, I enhanced the UI's visual appeal and intuitiveness, while React Router helped streamline endpoint management, boosting page speed by 15% and user experience. TypeScript and the React Testing Library played key roles in elevating site reliability and code efficiency, showcasing my commitment to quality and performance.
                     </p>
